alterações na semântica do código

--- a/index.html
+++ b/index.html
@@ -15,23 +15,28 @@
             <h1 class="quem">Quem está assistindo?</h1>
         </div>
         <section>
-           <ul>
+           <ul>     
                 <li>
-                    <img class="avatar" src="avatar1.png" alt="avatar1">
+                <div>
+                    <img class="avatar" src="avatar1.png" alt="avatar1"></div>
                     <p>Maria</p>
-                </li>
+                    </li> 
                 <li>
-                    <img class="avatar" src="avatar1 (1).png" alt="avatar2">
+                    <div>
+                    <img class="avatar" src="avatar1 (1).png" alt="avatar2"></div>
                     <p>Igor</p>
-                </li>   
+                </li>  
                 <li>
-                    <img class="avatar" src="avatar1 (2).png" alt="avatar3">
+                    <div>
+                    <img class="avatar" src="avatar1 (2).png" alt="avatar3"></div>
                     <p>João</p>
                 </li>
                 <li>
-                    <img class="avatar" src="Frame 5.png" alt="mais">
+                    <div>
+                    <img class="avatar" src="Frame 5.png" alt="mais"></div>
                     <p>Adicionar perfil</p>
                 </li>
+                
            </ul>
         </section>
             <div>
